Added Group view model and Merged Community landing page to community portal

--- a/public/styles/community/public-content.less
+++ b/public/styles/community/public-content.less
@@ -1,6 +1,6 @@
 #public-content {
   .container-fluid {
-    padding: 20px 15px 0px 15px;
+    padding: 0px 90.5px 0px 90.5px;
   }
 
   .empty { font-weight: normal}
@@ -14,7 +14,7 @@
   }
 
   .section {
-    padding: 8px 16px 8px 16px;
+    padding: 10px 0px;
   }
 
   .section-title {
