--- a/public/styles/community/public-news.less
+++ b/public/styles/community/public-news.less
@@ -1,6 +1,7 @@
 #public-news {
   .container-fluid {
-    padding: 20px 31px 0px 31px;
+    height: 500px;
+    padding: 0;
   }
   .full-row {
     overflow: hidden;
@@ -13,7 +14,7 @@
 
     .img-main {
       width: 100% !important;
-      height: 34vw !important;
+      height: 37vw !important;
     }
 
     .full-row [class*="col-"] {
