--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -30,6 +30,7 @@
 @import "community/discussion-list.less";
 @import "community/public-news.less";
 @import "community/public-content.less";
+@import "community/public-features.less";
 @import "eresources/eresources.less";
 @import "eresources/publications.less";
 @import "elearning/elearning.less";
