--- a/templates/views/community/community-analytics.jade
+++ b/templates/views/community/community-analytics.jade
@@ -19,7 +19,7 @@ block content
           
           #demographics.section.anchor
             .section-title Demographics
-            .section-content
+            #provinces.section-content
             br
           
           #industry.section.anchor
@@ -31,7 +31,7 @@ block content
         
           
 block js
-  script(src='/bower_components/highcharts/highcharts.js')
+  script(src='/bower_components/highcharts/highstock.js')
   script(src='/bower_components/highcharts/modules/exporting.js')
   script(src='/bower_components/highcharts/modules/map.js')
   script(src='/bower_components/highcharts/modules/drilldown.js')
