--- a/templates/views/community/community-public.jade
+++ b/templates/views/community/community-public.jade
@@ -1,6 +1,6 @@
 .community-body.community-public
-  #public-news
-    include includes/public-news.jade
+  #public-features
+    include includes/public-features.jade
   
   #public-content
     include includes/public-content.jade
