--- a/public/styles/community/community-analytics.less
+++ b/public/styles/community/community-analytics.less
@@ -17,7 +17,7 @@
     .section-content {
       position: relative;
       background-color: #FFFFFF;
-      padding: 10px 15px;
+      padding: 10px 0;
       border: 1px solid #e9e9e9;
       box-shadow: 0px 3px 2px #e9e9e9;
     }
@@ -43,9 +43,9 @@
     margin-top: -150px;
   }
 
-  #active-users { height: 400px; }
+  #active-users { height: 370px; }
 
-  #demographics .section-content {
+  #provinces .section-content {
     height: 600px;
     margin: 0 auto;
     min-width: 310px;
