--- a/public/styles/community/public-news.less
+++ b/public/styles/community/public-news.less
@@ -65,6 +65,7 @@
     bottom: 0;
     left: 0;
     color: white;
+    font-weight: normal !important;
 
     .tag {
       margin: 7px 0px 7px 0px;
