--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -10,12 +10,12 @@
           if events.length
             each event in events
               .event.row
-                a.event-date.col-xs-2.col-md-4(href="#")
-                  p.day #{event._.startDate.format('DD')}
-                  p.mon #{event._.startDate.format('MMM').toUpperCase()}
+                a.event-date.col-xs-2.col-md-4(href=config.host + '/groups/' + event.groupBelonged + '/view-posts/event/' + event._id)
+                  p.day #{event.startDateTime.date}
+                  p.mon #{event.startDateTime.month.toUpperCase()}
                 .event-details.col-xs-10.col-md-8
-                  p.text-muted AGRICULTURE
-                  a(href="#") #{event.title} 
+                  p.text-muted #{event.groupBelonged.toUpperCase()} 
+                  a(href=config.host + '/groups/' + event.groupBelonged + '/view-posts/event/' + event._id) #{event.eventName} 
               hr
           else
             .row 
@@ -27,13 +27,13 @@
         .section-title.focus.row 
           .title.col-md-5.col-xs-4
             .skew.col-xs-12
-            .skewed-text Latest Blogs
+            .skewed-text Recent Reports
         .section-content
           if blogPosts.length
             each blog in blogPosts
               .blog.row
                 .blog-avatar
-                  if blog.author.picture
+                  if blog.postedBy.photo
                     a(href="#").author-image
                       //- Include image here
                       img(src='images/community/director-news.jpg').img-responsive
@@ -42,13 +42,12 @@
                 .blog-content
                   .content-header
                     h4
-                      a(href="community/blogs/post/"+blog.slug).title #{blog.title}
-                      
-                    a(href="#").name.text-muted By #{blog.author.name.full} &nbsp
-                    a(href="#").time-since.text-muted #{blog._.publishedDate.moment().fromNow()}
+                      a(href=config.host + '/groups/' + blog.groupBelonged + '/view-posts/report/' + blog._id).title #{blog.reportTitle}
+                    - console.log(blog)
+                    a(href="#").name.text-muted By #{blog.postedBy.name} &nbsp
+                    a(href="#").time-since.text-muted #{blog.datePosted}
                   .content-body
-                    - console.log(validationErrors)
-                    p !{blog.content.brief}
+                    p !{blog.details}
               hr
           else
             .row 
