--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -30,7 +30,8 @@
 }
 
 #userVisitsWorld{
-  min-height: 400px;
+  /*min-height: 400px;
+  */height: 60vh;
   min-width: 310px;
   max-width: 900px;
   margin-bottom: 2%;
@@ -42,7 +43,8 @@
 
 
 #allVisit{
-  min-height: 320px;
+  /*min-height: 320px;
+  */height: 50vh;
   min-width: 310px;
   margin-bottom: 2%;
 }
@@ -50,28 +52,24 @@
 
 #userViewByISP{
   min-width: 310px;
-  min-height: 350px;
+  /*min-height: 350px;
+  */height: 60vh;
   margin-bottom: 2%;
 }
 
 #allReactions{
-  min-height: 400px;
+  /*min-height: 400px;
+  */height: 55vh;
   min-width: 310px;
-  margin-bottom: 2%;
 }
 
 .white-bg{
   background-color: white;
 }
 
-#allComments{
-  min-width: 310px;
-  min-height: 350px;
-  margin-bottom: 2%;
-}
-
 #popularperregion{
-  min-height: 350px;
+  /*min-height: 350px;
+  */height: 60vh;
   min-width: 310px;
   margin-bottom: 2%;
 }
@@ -105,12 +103,14 @@ h5{
 }
 
 #ratioVisit{
-  min-height: 320px;
+  /*min-height: 320px;
+  */height: 50vh;
   max-width: 600px;
 }
 
 .well{
   margin-bottom: 4%;
+  height: 7vh;
 }
 
 .panel-primary{
