--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -30,8 +30,7 @@
 }
 
 #userVisitsWorld{
-  /*min-height: 400px;
-  */height: 60vh;
+  height: 60vh;
   min-width: 310px;
   max-width: 900px;
   margin-bottom: 2%;
@@ -43,8 +42,7 @@
 
 
 #allVisit{
-  /*min-height: 320px;
-  */height: 50vh;
+  height: 50vh;
   min-width: 310px;
   margin-bottom: 2%;
 }
@@ -52,14 +50,12 @@
 
 #userViewByISP{
   min-width: 310px;
-  /*min-height: 350px;
-  */height: 60vh;
+  height: 60vh;
   margin-bottom: 2%;
 }
 
 #allReactions{
-  /*min-height: 400px;
-  */height: 55vh;
+  height: 55vh;
   min-width: 310px;
 }
 
@@ -68,8 +64,7 @@
 }
 
 #popularperregion{
-  /*min-height: 350px;
-  */height: 60vh;
+  height: 60vh;
   min-width: 310px;
   margin-bottom: 2%;
 }
@@ -103,8 +98,7 @@ h5{
 }
 
 #ratioVisit{
-  /*min-height: 320px;
-  */height: 50vh;
+  height: 50vh;
   max-width: 600px;
 }
 
@@ -123,4 +117,8 @@ h5{
 .panel-primary>.panel-heading{
   background-color: #3062B7;
   border-color: #3062B7;
+}
+
+.panel-body{
+  padding: 1% 1% 1% 1%;
 }
