Finalized Analytics view and updated modules

--- a/public/styles/community/public-features.less
+++ b/public/styles/community/public-features.less
@@ -98,6 +98,14 @@
       height: 100%;
   }
 
+  .features-list .main-feature li.list-group-item {
+      border: none;
+      background-color: transparent;
+      color: black;
+      font-size: 14px;
+      line-height: 1.5;
+  }
+
   @media only screen and (max-width: 992px) {
       .features-list {
           display: block;
