--- a/templates/views/community/includes/public-news.jade
+++ b/templates/views/community/includes/public-news.jade
@@ -2,7 +2,7 @@
   .row.full-row
     .col-md-7.image
       a(href=news ? 'blog/post/'+news.slug: '/community')
-        img(src=news ? news.image.secure_url: '').img-responsive.img-main
+        img(src=news && news.image ? news.image.secure_url: '').img-responsive.img-main
         if(news)
           .img-description
             span.badge.tag #{news.categories.name}
