Removed an unnecessary link

--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -58,7 +58,7 @@
         .section-title.focus.row 
           .title.col-md-5.col-xs-4
             .skew.col-xs-12
-            a(href="/community/discussions" style="color: white").skewed-text Discussions
+            .skewed-text Discussions
         .section-content
           if discussions && discussions.length
             each discussion in discussions
